--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 body, html {
     height: 100%;
     margin: 0;
+    overflow: hidden;
 }
 
 .bg {
@@ -19,9 +20,24 @@ body, html {
 
 .flex-container {
     display: flex;
-    height: 100%;
+    height: 98%;
     align-items: center;
+    justify-content: center;
     flex-shrink: 0;
+    flex-direction: column;
+}
+
+.flex-footer {
+    display: flex;
+    height: 1%;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    flex-direction: column;
+    color: white;
+    font-family: 'Shippori Mincho', serif;
+    font-size: 1vw;
+    text-shadow: 0 0 12px #32c5fa;
 }
 
 .flex-item {
@@ -30,7 +46,7 @@ body, html {
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 5rem;
+    font-size: 6vw;
     text-shadow: 0 0 12px #32c5fa;
     flex-direction: column;
 }
