--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap');
 
 body, html {
     height: 100%;
@@ -35,7 +35,7 @@ body, html {
     flex-shrink: 0;
     flex-direction: column;
     color: white;
-    font-family: 'Shippori Mincho', serif;
+    font-family: 'Zen Old Mincho', serif;
     font-size: 1vw;
     text-shadow: 0 0 12px #32c5fa;
 }
@@ -56,5 +56,5 @@ body, html {
 }
 
 .title {
-    font-family: 'Shippori Mincho', serif;
+    font-family: 'Zen Old Mincho', serif;
 }
